<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_dine_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtv_detail_cust"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:paddingTop="35dp"
        android:text="@string/txt_detail_cust"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/editTxt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtv_detail_cust"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:ems="10"
        android:hint="@string/edTxt_name"
        android:inputType="textCapSentences|textPersonName"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtv_no_meja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTxt_name"
        android:layout_alignStart="@+id/editTxt_name"
        android:layout_below="@+id/editTxt_name"
        android:layout_marginTop="28dp"
        android:text="@string/txtlbl_no_meja"
        android:textSize="20sp"
        android:textColorHighlight="@android:color/holo_purple"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <Spinner
        android:id="@+id/spinner_no_meja"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtv_no_meja"
        android:layout_alignEnd="@+id/editTxt_name"
        android:layout_alignRight="@+id/editTxt_name"
        android:entries="@array/no_meja"
        android:padding="5dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtv_no_meja"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:background="@color/colorPrimary"
        android:text="@string/txt_choose_food"
        android:textColor="@android:color/white"
        android:onClick="onClickOrder"/>

</RelativeLayout>