<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_detail_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtv_detail_menu"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:paddingTop="35dp"
        android:text="@string/title_detail_menu"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/image_food"
        android:layout_width="150dp"
        android:layout_height="250dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtv_detail_menu"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="83dp"
        android:contentDescription="@string/imgDesc_detail_menu"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/txtv_food_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/image_food"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="54dp"
        android:layout_marginRight="21dp"
        android:layout_marginEnd="21dp"
        android:layout_toEndOf="@+id/image_food"
        android:layout_toRightOf="@+id/image_food"
        android:text="TextView"
        android:textSize="24sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <TextView
        android:id="@+id/txtv_food_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/image_food"
        android:layout_below="@+id/txtv_food_name"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="21dp"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:text="@string/btnTxt_back_to_main_menu"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:onClick="backToMainMenu"/>


</RelativeLayout>
